Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </section>
 
     <section class="main-content">
-      <p>
-</p>
+      <h1>
+<a id="link-text" class="anchor" href="#link-text" aria-hidden="true"><span class="octicon octicon-link"></span></a>Link Text</h1>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Cybertron02/coolpics">Coolpics</a> is maintained by <a href="https://github.com/Cybertron02">Cybertron02</a>.</span>
