--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="https://github.com/Cybertron02/coolpics/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Cybertron02/coolpics/tarball/master" class="btn">Download .tar.gz</a>
     </section>
+    <p><a href="https://github.com/Cybertron02/coolpics/generated_pages/new">img src="http://i.telegraph.co.uk/multimedia/archive/03235/potd-husky_3235255k.jpg"</a></p>
 
     <section class="main-content">
       <h1>
